# periodic-table-battleship-rl

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: 01-analise-do-jogo-origem.md  02-especificacao-do-ambiente.md  03-protocolo-de-benchmark.md  04-roadmap.md  05-experimentos-e-visualizacoes.md  06-execucao-e-rastreamento.md  07-contratos-e-criterios-de-aceite.md  08-relatorio-v0.1.md  09-protocolo-campanha-v0.2.md  10-relatorio-v0.2.md  11-protocolo-v0.3.md  12-relatorio-v0.3.md  13-demonstracao-local.md  14-ablacao-ataque-v0.4.md  14-decisao-de-escala-gpu.md  15-self-play-liga-e-snapshots.md  16-avaliacao-cross-topology.md  17-dqn-mascarado.md  17-ppo-cnn-espacial.md  17-protocolo-v0.5.md  18-gnn-periodic-prototype.md  18-imitacao-hunt-target.md  18-operacao-agentes-v0.5.md  19-apresentacao-v0.5.md  20-relatorio-validacao-v0.5.md  21-oraculo-exato-microtabuleiro.md  22-ambiente-cuda-isolado.md  22-crenca-bayesiana-e-planejamento.md  23-benchmark-cpu-gpu-e-campanha-escalavel.md  23-politica-neural-hibrida-de-crenca.md  23-self-play-bayesiano-v0.6.md  24-relatorio-v0.6.md  25-q-learning-sarsa-micro-oraculo.md  26-protocolo-v0.7.md  27-calibracao-amostrador-bayesiano.md  28-validacao-bayesiana-multi-topologia-v0.7.md  29-demonstracoes-bayesianas-publicas.md  30-destilacao-neural-bayesiana-v0.7.md  31-relatorio-v0.7.md  32-relatorio-v0.9.md  (+11 more)
scripts/: analyze_v0_3_results.py  benchmark_cpu_gpu.py  generate_bayesian_demonstrations.py  run_attack_ablation.py  run_bayesian_cross_topology_validation.py  run_bayesian_cross_topology_validation_v0_9.py  (+20 more)
(+544 files in other folders)
