[project]
name = "periodic-table-battleship-rl"
version = "0.7.0"
description = "Ambiente Gymnasium e benchmark de reinforcement learning para Batalha Naval na tabela periódica."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "djairofilho", email = "djairodsfilho@gmail.com" },
]
dependencies = [
    "gymnasium>=1.0,<2.0",
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
train = [
    "sb3-contrib>=2.6,<3.0",
    "stable-baselines3>=2.6,<3.0",
]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.6,<10.0",
]
visual = [
    "matplotlib>=3.8,<4.0",
    "pillow>=10.0,<12.0",
    "seaborn>=0.13,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.11,<1.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
